# chacha20poly1305.wasm

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/node/: index.ts
src/node/mods/: index.test.ts  index.ts
src/wasm/: Cargo.toml
src/wasm/pkg/: chacha20poly1305_wasm.d.ts  chacha20poly1305_wasm.js  chacha20poly1305_wasm.wasm.js  chacha20poly1305_wasm_bg.wasm  chacha20poly1305_wasm_bg.wasm.d.ts  package.json
src/wasm/src/mods/chacha20poly1305/: mod.rs
