[package]
name = "chacha20poly1305_wasm"
version = "1.0.0"
authors = ["hazae41 <4405263+hazae41@users.noreply.github.com>"]
edition = "2021"

description = "WebAssembly port of Chacha20Poly1305"
repository = "https://github.com/hazae41/chacha20poly1305.wasm"
license = "Unlicense"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true
debug = false
opt-level = 3

[dependencies]
wasm-bindgen = { version = "0.2.93", default-features = false }
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["alloc"] }
memory_wasm = { path = "../../node_modules/@hazae41/memory.wasm/dist/wasm"}
